feat: added format option to support jpeg and webp, moved ratio from path to query param (#13)
