# src/lib/server/renderMapAuto.ts
@@ -1,11 +1,12 @@
 import type { RenderOptions } from '@maplibre/maplibre-gl-native';
-import { renderMap } from '$lib/server/renderMap';
+import { renderMap, type extensionFormat } from '$lib/server/renderMap';
 import type { StyleSpecification } from 'maplibre-gl';
 
 export const renderMapAuto = async (
 	width: number,
 	height: number,
 	ratio: number,
+	format: extensionFormat,
 	style: StyleSpecification,
 	url: URL
 ) => {
@@ -23,7 +24,7 @@ export const renderMapAuto = async (
 		pitch: pitch
 	};
 
-	const image = await renderMap(url, style, mapOptions, width, height, ratio);
+	const image = await renderMap(url, style, mapOptions, width, height, ratio, format);
 
 	return image;
 };
